--- a/Dokumentation/Latex/content/pflichtenheft.tex
+++ b/Dokumentation/Latex/content/pflichtenheft.tex
@@ -64,7 +64,7 @@ Es ist eine Lernspiel Software für Grundschulschüler zu entwickeln, welche auf
 \item Übersicht über die vergangen Spiele
 \item Lösen von Aufgaben unter Zeitdruck
 \item Kindgerechte und einfache Menügestaltung
-\item Schüler soll es ermöglicht werden in eigenen Tempo lernen
+\item Schüler soll es ermöglicht werden in eigenem Tempo zulernen
 \end{enumerate}
 
 \subsubsection{Lehrer}
@@ -89,7 +89,7 @@ Es existiert keine automatische Erfassung von Benutzern aus Fremddaten.
 \section{Produkteinsatz}
 Die App soll als Referenz für die Lehre der Fortgeschrittenen Swift 4 Entwicklung des Mobile Computing Studiengangs an der Hochschule Hof dienen.\\
 \\
-Hypothetisch soll die App im Rahmen des Grundschulunterrichts eingesetzt werden. Hierbei hat jeder Schüler ein eigenes Tablet und kann mit diesem Aufgaben bearbeiten. Der Lehrer kann den Schülern Aufgaben zuweisen und die Aufgaben Ergebnisse einsehen.  
+Hypothetisch soll die App im Rahmen des Grundschulunterrichts eingesetzt werden. Hierbei hat jeder Schüler ein eigenes Tablet und kann mit diesem Aufgaben bearbeiten. Der Lehrer kann den Schülern Aufgaben zuweisen und die Aufgabenergebnisse einsehen.  
 
 \subsection{Anwendungsbereiche}
 Primär Grundschulen, später Erweiterung für höhere Bildungseinrichtungen denkbar. 
@@ -98,7 +98,7 @@ Primär Grundschulen, später Erweiterung für höhere Bildungseinrichtungen den
 Schüler / Studenten und Lehrer bzw. Lehrbeauftragte
 
 \subsection{Betriebsbedingungen}
-Um die App in allen Funktionen nutzen zu können, wird ein iPad mit iOS 10 mit Internetverbindung vorausgesetzt. Beim Einloggen als Schüler müssen alle freigeschalteten und geteilten Aufgaben abgerufen werden. Eingeloggte Lehrer sollen eine Übersicht über die verfügbaren Aufgabentypen sowie Schüler bzw. deren Klassen haben. Die Pflege der Schnittstelle soll Wartungsfrei sein. Die administrative Gewalt (Zuweisung der Aufgaben, sowie Einblick in die Statistik der Schüler) soll bei den Lehrern stehen.
+Um die App in allen Funktionen nutzen zu können, wird ein iPad mit iOS 10 mit Internetverbindung vorausgesetzt. Beim Einloggen als Schüler müssen alle freigeschalteten und geteilten Aufgaben abgerufen werden. Eingeloggte Lehrer sollen eine Übersicht über die verfügbaren Aufgabentypen sowie Schüler bzw. deren Klassen haben. Die Pflege der Schnittstelle soll wartungsfrei sein. Die administrative Gewalt (Zuweisung der Aufgaben, sowie Einblick in die Statistik der Schüler) soll bei den Lehrern stehen.
 
 
 
@@ -123,10 +123,10 @@ Wählt der Schüler den “Spiel starten” Button in den Spielinformationen aus
 
 
 \subsection{/F0050/ Leistungen anzeigen (Schüler)}
-Wählt ein Schüler den ''Erfolge Tab'' in dem Schülerhauptmenü aus, so kann er seine Spielerfolge einsehen. Hierbei wird ihm eine Punktzahl, welche die Summe der innerhalb der Lernspiele erreichten Punkte ist. Zudem kann er sich eine Übersicht über seine letzten Spiele und die darin richtig bzw. falsch gelösten Aufgaben anzeigen lassen.
+Wählt ein Schüler den ''Erfolge Tab'' in dem Schülerhauptmenü aus, so kann er seine Spielerfolge einsehen. Hierbei wird ihm eine Punktzahl angezeigt, welche die Summe der innerhalb der Lernspiele erreichten Punkte ist. Zudem kann er sich eine Übersicht über seine letzten Spiele und die darin richtig bzw. falsch gelösten Aufgaben anzeigen lassen.
 
 \subsection{/F0060/ Schüler in Klassen einladen (Lehrer/Schnittstelle/Schüler)}
-Bevor der Lehrer Aufgaben verteilen kann muss er seine Schüler in eine Klasse einladen. Wenn die Schüler die Einladung der Lehrer annehmen, werden sie der Klasse hinzugefügt.
+Bevor der Lehrer Aufgaben verteilen kann, muss er seine Schüler in eine Klasse einladen. Wenn die Schüler die Einladung der Lehrer annehmen, werden sie der Klasse hinzugefügt.
 
 \subsection{/F0070/ Aufgaben Klassen zuteilen}
 Ein Lehrer kann an einzelne Schüler spezielle Aufgaben stellen.
