Updated Teacher Doc

--- a/Dokumentation/Latex/content/teacherDoc.tex
+++ b/Dokumentation/Latex/content/teacherDoc.tex
@@ -1,4 +1,4 @@
-\chapter{Lehrer UI, Anbindung an die Schnittstelle, Erstellen und Teilen von Aufgaben}
+\chapter{Lehrer-Seite}
 Philipp Dümlein, Bastian Kusserow, Maximilian Sonntag
 
 
